--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,9 @@
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "fireorm": "^0.22.1",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
